	  that caused an uninitialized variable warning.  I still don't 
	  have a test to prove that the changes are correct.
	* configs/olimex-lpc2378 - Add support for the CodeSourcery toolchain
	  under Linux (contributed by Alan Carvalho de Assis).
	* arch/arm/src/lpc17xx/lpc17_gpio.c - Fix an important GPIO configuration
	  bug:  When attempting to set no pull-up or pull-down (floating),
	  it would, instead, select pull-down.
	* arch/arm/src/lm3s/lm3s_gpioirq.c - Fix warning for returning a value
	  from functions returning void (contributed by Tiago Maluta).
	* netutils/dhcpc/dhcpc.c -- lease_time was not in host order
	* examples/uip/main.c - if DHCPC is selected, this example now shows
	  the assigned IP address.
	* arch/arm/src/lm3s and arch/arm/include/lm3s - Definitions for the
	  TI LM3S9B96 contributed by Tiago Maluta.
	* arch/arm/src/lm3s/lm3s_gioirq.c - Fix a logic error in the address
	  table lookup.
	* arch/arm/src/lm3s/lm3s_gioirq.c - Also needs to enable the global
	  GPIO interrupts.
	* arch/arm/src/lm3s/lm3s_internal.h and lm3s_gpio.c - Fixed the encoding
	  of GPIO port number that limited support for GPIO ports to 8
	* sched/pg_*.c and *.c and include/nuttx/page.h - Implemented the
	  common, core logic for on-demand paging. See
	  http://www.nuttx.org/NuttXDemandPaging.html for details.
	* drivers/usbdev/usbdev_serial.c - Correct compilation errors that
	  occur if CONFIG_USBDEV_DUALSPEED is selected.
	* configs/ea3131/pgnsh - Add an NSH configuration with on-demand paging
	  enabled.  This is not expected to be a functionality configuration (at
	  least not yet); it was created in order to debug the on-demand paging
	  feature.
	* configs/ntosd-dm320/*/Make.defs - Codesourcery and devkitARM toolchains
	  now supported for the Neuros OSD.
	* configs/ntosd-dm320 and arch/arm/src/dm320 - Add support for the
	  Neuros production OSD (changes contributed by bf.nuttx).

5.10 2010-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
